@@ -1,0 +1,5 @@
+<RCC>
+    <qresource prefix="/kwp">
+        <file>data/icon.png</file>
+    </qresource>
+</RCC>
