@@ -1,0 +1,47 @@
+/* ============================================================
+* KWalletPasswords - KWallet support plugin for QupZilla
+* Copyright (C) 2013  David Rosca <nowrep@gmail.com>
+*
+* This program is free software: you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation, either version 3 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program.  If not, see <http://www.gnu.org/licenses/>.
+* ============================================================ */
+#ifndef KWALLETPLUGIN_H
+#define KWALLETPLUGIN_H
+
+#include "plugininterface.h"
+
+class KWalletPasswordBackend;
+
+class KWalletPlugin : public QObject, public PluginInterface
+{
+    Q_OBJECT
+    Q_INTERFACES(PluginInterface)
+
+#if QT_VERSION >= 0x050000
+    Q_PLUGIN_METADATA(IID "QupZilla.Browser.plugin.KWalletPasswords")
+#endif
+
+public:
+    explicit KWalletPlugin();
+    PluginSpec pluginSpec();
+
+    void init(const QString &sPath);
+    void unload();
+    bool testPlugin();
+
+private:
+    KWalletPasswordBackend* m_backend;
+
+};
+
+#endif // KWALLETPLUGIN_H
