@@ -6,6 +6,7 @@ Version 1.5.0
     * added delete action in edit context menu on page
     * added possibility to remove EasyList from AdBlock
     * added inline domain completion to urlbar
+    * added KWallet password backend plugin
     * proxy exceptions now supports wildcards (*, ?)
     * cancel upload when trying to upload non-readable files
     * GreaseMonkey: added support for GM_Settings
